@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-09T16:10:08Z",
-  "count_outdated" : 1797,
-  "uniques_outdated" : 122,
-  "count" : 1866,
-  "uniques" : 130,
+  "timestamp" : "2022-08-10T08:10:07Z",
+  "count_outdated" : 1798,
+  "uniques_outdated" : 123,
+  "count" : 1867,
+  "uniques" : 131,
   "views" : [
-    {
-      "timestamp": "2022-07-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-28T00:00:00Z",
       "count": 2,
@@ -58,6 +51,13 @@
       "timestamp": "2022-08-09T00:00:00Z",
       "count": 10,
       "count_minmax": [ 10, 10 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
