@@ -3,11 +3,6 @@
   "uniques": 2,
   "views": [
     {
-      "timestamp": "2022-07-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-07-28T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -40,6 +35,11 @@
     {
       "timestamp": "2022-08-09T00:00:00Z",
       "count": 10,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-10T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
